# calery_example

./: Dockerfile  Dockerfile.master  README.md  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml
project/: main.py
project/worker/: celery.py  magic.py  tasks.py
worker/: celery.py  tasks.py
