[tool.poetry]
name = "celery_example"
version = "0.1.0"
description = ""
authors = ["Ruud Cools <ruud.cools@ns.nl>"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greet = "celery_example.main:hoi"